# SolitaireGL4_v2

./: .clang-format  .clang-tidy  CMakeLists.txt  README.md
Assets/: Cards.json
CMake/: glad.cmake  stb.cmake
Game/: Assets.cpp  Assets.hpp  CardRenderer.cpp  CardRenderer.hpp  Cards.cpp  Cards.hpp  File.cpp  File.hpp  JSON.cpp  JSON.hpp  Shaders.cpp  Shaders.hpp  Types.hpp  VertexBuffer.cpp  VertexBuffer.hpp  Window.cpp  Window.hpp  main.cpp
Game/Tests/: CMakeLists.txt  FileTests.cpp  JSONTests.cpp
Shaders/: card.frag  card.vert
